# yt-transcript-dataset-generator

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  videos.csv
src/: converter.py  dataset.py  downloader.py  qa.py  transcript.py  utils.py
tests/: test_converter.py  test_dataset.py  test_downloader.py  test_transcript.py
