[project]
name = "mp3-transcript-yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "instructor>=1.10.0",
    "moviepy>=2.2.1",
    "openai>=1.98.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.1",
    "youtube-transcript-api>=1.2.1",
    "yt-dlp>=2025.7.21",
]
